--- a/.github/workflows/caijiip.yml
+++ b/.github/workflows/caijiip.yml
@@ -1,9 +1,9 @@
 name: Update IP List
 
 on:
-  #schedule:
-    #- cron: '0 */3 * * *' # 每3小时运行一次
-  workflow_dispatch: # 允许手动触发
+  # schedule:
+    # - cron: '*/30 * * * *'  # 每隔三十分钟运行一次
+  workflow_dispatch:  # 手动触发
   #push: # 允许提交触发
 
 jobs:
