--- a/.github/workflows/caijiip.yml
+++ b/.github/workflows/caijiip.yml
@@ -1,8 +1,8 @@
 name: Update IP List
 
 on:
-  # schedule:
-    # - cron: '*/30 * * * *'  # 每隔三十分钟运行一次
+  schedule:
+    - cron: '*/30 * * * *'  # 每隔三十分钟运行一次
   workflow_dispatch:  # 手动触发
   #push: # 允许提交触发
 
