--- a/.github/workflows/caijiip.yml
+++ b/.github/workflows/caijiip.yml
@@ -30,8 +30,8 @@ jobs:
         
     - name: Commit and push changes
       run: |
-        git config --global user.email "tianshideyou@proton.me"
-        git config --global user.name "tianshipapa"
+        git config --global user.email "baolw50@gmail.com"
+        git config --global user.name "jc-lw"
         if [ -n "$(git status --porcelain)" ]; then
           git add ip.txt
           git commit -m "Automatic update"
