--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '*/30 * * * *'  # 每隔三十分钟运行一次
   workflow_dispatch:  # 手动触发
-  push: # 允许提交触发
+ # push: # 允许提交触发
   
 jobs:
   update-dns:
